[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arpes-demeshing"
version = "0.3.0"
description = "Dual U-Net Deep Image Prior for ARPES mesh artifact removal"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Junde Liu"},
    {name = "Dongchen Huang"},
    {name = "Yi-feng Yang"},
    {name = "Tian Qian"},
]
keywords = ["ARPES", "photoemission", "deep-learning", "image-processing", "mesh-removal", "deep-image-prior"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch>=1.13.0,<2.7.0",
    "torchvision>=0.14.0,<0.22.0",
    "numpy>=1.19.0,<2.0",
    "matplotlib>=3.3.0",
    "scikit-image>=0.17.0",
    "opencv-python>=4.5.0,<4.11",
    "Pillow>=8.0.0",
    "igor2>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/HuangDongchen/ARPES_Demeshing"
Repository = "https://github.com/HuangDongchen/ARPES_Demeshing"
Paper = "https://doi.org/10.1103/PhysRevB.107.165106"

[project.scripts]
arpes-demesh = "arpes_demeshing.cli:main"

[tool.setuptools.packages.find]
include = ["arpes_demeshing*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"arpes_demeshing/models/*" = ["F401", "F403", "F405", "E741", "F841"]
"arpes_demeshing/utils/common_utils.py" = ["F811", "W291", "W293"]
"arpes_demeshing/utils/denoising_utils.py" = ["F403", "F405", "W291", "W293"]
